--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,6 +1,6 @@
 body {
-  height: 100vh;
-  background: #051900 ;
+  //height: 100vh;
+  background: #000000 ;
 }
 
 h1 {
@@ -20,36 +20,37 @@ h2 {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  perspective: 1000px;
+  //perspective: 1000px;
 }
 
 #game-area{
   position: relative;
   z-index: 1;
   width: 100%;
-  transform: rotateX(35deg);
-  padding: 0 2rem 2rem 2rem;
-  background: #38630e;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 46px 1px rgba(196,222,0,1);
-  -moz-box-shadow: 0px 0px 46px 1px rgba(196,222,0,1);
-  box-shadow: 0px 0px 46px 1px rgba(196,222,0,1);
+  //transform: rotateX(35deg);
+  //padding: 0 2rem 2rem 2rem;
+  //background: #38630e;
+  background: #000000;
+  //border-radius: 10px;
+  //-webkit-box-shadow: 0px 0px 46px 1px rgba(196,222,0,1);
+  //-moz-box-shadow: 0px 0px 46px 1px rgba(196,222,0,1);
+  //box-shadow: 0px 0px 46px 1px rgba(196,222,0,1);
   
 }
 
 #dealer-area {
-  margin-bottom: 2rem;
+  //margin-bottom: 2rem;
 }
 
 #dealer-cards {
-  transform: translateY(-40px);
+  //transform: translateY(-40px);
   display: flex;
   justify-content: center;
   height: 120px;
 }
 
 #player-area #announcement {
-  margin-left: 25%;
+  //margin-left: 25%;
 }
 
 #player-cards {
@@ -60,16 +61,16 @@ h2 {
 
 #action-area {
   position: absolute;
-  right: 10px;
-  bottom: 20%;
+  //right: 10px;
+  //bottom: 20%;
   z-index: 10;
-  width: 15%;
+  //width: 15%;
   display: flex;
   flex-direction: column;
 }
 
 #next-hand, #hit-me {
-  margin-bottom: 3rem;
+  //margin-bottom: 3rem;
 }
 
 button {
@@ -85,9 +86,9 @@ button {
   padding-top: 20px;
   transition: all 0.2s ease 0s;
   
-  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
-  -moz-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
-  box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
+  //-webkit-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
+  //-moz-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
+  //box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 button:hover {
   cursor: pointer;
@@ -116,6 +117,6 @@ img {
 
 @media (min-width: 1200px) {
   body {
-    padding: 0 12%;
+    //padding: 0 12%;
   }
 }
