--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -60,13 +60,14 @@ h2 {
 }
 
 #action-area {
-  position: absolute;
+  //position: absolute;
+  justify-content: center;
   //right: 10px;
   //bottom: 20%;
   z-index: 10;
   //width: 15%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 #next-hand, #hit-me {
@@ -86,9 +87,9 @@ button {
   padding-top: 20px;
   transition: all 0.2s ease 0s;
   
-  //-webkit-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
-  //-moz-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
-  //box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
+  -webkit-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
+  -moz-box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
+  box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.75);
 }
 button:hover {
   cursor: pointer;
