Fix scoring problem with straight hand, and modify UI

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -10,12 +10,14 @@ h1 {
 }
 
 h2 {
+  text-align: center;
+  color: white;
   font-family: fantasy;
   font-size: 26px;
-  color: #051900;
 }
 
 #dealer-number {
+  text-align: center;
   font-family: fantasy;
   font-size: 26px;
   color: white;
